--- a/FilesReuse/footer.html
+++ b/FilesReuse/footer.html
@@ -1,4 +1,4 @@
- <!-- Footer -->
+﻿ <!-- Footer -->
     <footer class="grey-custome text-gray-300 mt-auto">
         <div class="container mx-auto px-6 pt-16 pb-8">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
@@ -11,7 +11,7 @@
                     <ul>
                         <li class="mb-2"><a href="#" data-page="page-about" class="hover:text-[#FDEEBE]">About Us</a></li>
                         <li class="mb-2"><a href="#" data-page="page-services" class="hover:text-[#FDEEBE]">Services</a></li>
-                        <li class="mb-2"><a href="#" class="hover:text-[#FDEEBE]">Projects</a></li>
+                        <li class="mb-2"><a href="projects.html" class="hover:text-[#FDEEBE]">Projects</a></li>
                         <li class="mb-2"><a href="#" class="hover:text-[#FDEEBE]">Blog</a></li>
                     </ul>
                 </div>
@@ -32,7 +32,7 @@
             </div>
 
             <div class="mt-8 border-t border-gray-700 pt-6 text-center text-sm text-gray-400">
-                <p>Privacy Policy | Copyright © 2025 | Designed at Right. Reserved!</p>
+                <p>Privacy Policy | Copyright Â© 2025 | Designed at Right. Reserved!</p>
             </div>
         </div>
     </footer>
