--- a/FilesReuse/header.html
+++ b/FilesReuse/header.html
@@ -6,7 +6,7 @@
         <div class="hidden lg:flex items-center space-x-8">
             <a href="about.html" class="text-gray-300 hover:text-[#FDEEBE] transition-colors duration-300">ABOUT US</a>
             <a href="services.html" class="text-gray-300 hover:text-[#FDEEBE] transition-colors duration-300">SERVICES</a>
-            <a href="#" class="text-gray-300 hover:text-[#FDEEBE] transition-colors duration-300">BIM</a>
+            <a href="bim.html" class="text-gray-300 hover:text-[#FDEEBE] transition-colors duration-300">BIM</a>
             <a href="projects.html" class="text-gray-300 hover:text-[#FDEEBE] transition-colors duration-300">PROJECTS</a>
             <a href="careers.html" class="text-gray-300 hover:text-[#FDEEBE] transition-colors duration-300">CAREERS</a>
             <a href="blog.html" class="text-gray-300 hover:text-[#FDEEBE] transition-colors duration-300">BLOG</a>
@@ -19,6 +19,7 @@
     <div id="mobile-menu" class="hidden lg:hidden px-6 pt-2 pb-4 bg-slate-800">
         <a href="about.html" class="block text-gray-300 hover:text-[#FDEEBE] py-2">ABOUT US</a>
         <a href="services.html" class="block text-gray-300 hover:text-[#FDEEBE] py-2">SERVICES</a>
+        <a href="bim.html" class="block text-gray-300 hover:text-[#FDEEBE] py-2">BIM</a>
         <a href="projects.html" class="block text-gray-300 hover:text-[#FDEEBE] py-2">PROJECTS</a>
         <a href="careers.html" class="block text-gray-300 hover:text-[#FDEEBE] py-2">CAREERS</a>
         <a href="blog.html" class="block text-gray-300 hover:text-[#FDEEBE] py-2">BLOG</a>
