--- a/about.html
+++ b/about.html
@@ -1,27 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head >
-     <script src="https://cdn.tailwindcss.com"></script>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Us | Aurelia Design</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Assests/Css/stylesheet.css">
-
-
 </head>
 <body class="bg-slate-900 text-gray-200 flex flex-col min-h-screen">
     <div id="header"></div>
 
-    <main class="flex-grow px-6 container mx-auto py-12">
-        <h1 class="text-4xl font-bold mb-4">About Us</h1>
-        <p>We are Aurelia Design, committed to innovation...</p>
+    <main class="flex-grow">
+        <section class="relative overflow-hidden py-20 md:py-24 bg-gradient-to-r from-slate-950 via-slate-900 to-slate-800">
+            <div class="absolute -top-20 -right-16 h-72 w-72 rounded-full bg-[#d4af37]/15 blur-3xl"></div>
+            <div class="absolute -bottom-20 -left-16 h-72 w-72 rounded-full bg-[#a27b02]/15 blur-3xl"></div>
+            <div class="container mx-auto px-6 relative z-10">
+                <p class="text-[#FDEEBE] tracking-widest text-sm mb-3">ABOUT AURELIA DESIGN</p>
+                <h1 class="text-4xl md:text-6xl font-bold text-white max-w-4xl">Designing Better Spaces with Engineering Intelligence</h1>
+                <p class="text-gray-300 mt-5 max-w-3xl">We are a multidisciplinary team delivering architecture, interiors, BIM, and MEP solutions for hospitality, commercial, and residential projects worldwide.</p>
+            </div>
+        </section>
+
+        <section class="py-16 md:py-20 bg-slate-900">
+            <div class="container mx-auto px-6 grid lg:grid-cols-2 gap-10 items-center">
+                <div>
+                    <h2 class="text-3xl font-bold text-white mb-5">Who We Are</h2>
+                    <p class="text-gray-400 mb-4">Aurelia Design was built on one simple belief: design should be beautiful, practical, and ready for construction from day one. Our team combines creative vision with technical depth to deliver precise, coordinated outputs across every phase.</p>
+                    <p class="text-gray-400">From concept modeling to detailed drawings, we maintain clear communication, predictable timelines, and quality-first delivery standards for every client and project scale.</p>
+                </div>
+                <div>
+                    <img src="images/Mainbanner2.jpg" alt="Aurelia Design Team Work" class="rounded-2xl shadow-xl w-full object-cover h-[360px]">
+                </div>
+            </div>
+        </section>
+
+        <section class="py-16 bg-slate-800">
+            <div class="container mx-auto px-6">
+                <h2 class="text-3xl md:text-4xl font-bold text-center text-white mb-12">Our Core Values</h2>
+                <div class="grid md:grid-cols-3 gap-8">
+                    <article class="rounded-xl border border-slate-700 bg-slate-900 p-6">
+                        <h3 class="text-xl font-semibold text-white mb-3">Precision</h3>
+                        <p class="text-gray-400">Every detail is engineered for buildability, accuracy, and smoother project execution.</p>
+                    </article>
+                    <article class="rounded-xl border border-slate-700 bg-slate-900 p-6">
+                        <h3 class="text-xl font-semibold text-white mb-3">Innovation</h3>
+                        <p class="text-gray-400">We use modern workflows in BIM and design to improve speed, quality, and decision-making.</p>
+                    </article>
+                    <article class="rounded-xl border border-slate-700 bg-slate-900 p-6">
+                        <h3 class="text-xl font-semibold text-white mb-3">Reliability</h3>
+                        <p class="text-gray-400">Clients trust us for committed timelines, transparent communication, and consistent delivery.</p>
+                    </article>
+                </div>
+            </div>
+        </section>
+
+        <section class="py-16 md:py-20 bg-slate-900">
+            <div class="container mx-auto px-6">
+                <h2 class="text-3xl md:text-4xl font-bold text-center text-white mb-12">Our Journey in Numbers</h2>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
+                    <div class="rounded-xl border border-slate-700 p-8 bg-slate-800">
+                        <div class="text-5xl font-bold text-[#d4af37]">250+</div>
+                        <p class="mt-3 text-gray-300">Projects Delivered</p>
+                    </div>
+                    <div class="rounded-xl border border-slate-700 p-8 bg-slate-800">
+                        <div class="text-5xl font-bold text-[#d4af37]">85+</div>
+                        <p class="mt-3 text-gray-300">Architects and Engineers</p>
+                    </div>
+                    <div class="rounded-xl border border-slate-700 p-8 bg-slate-800">
+                        <div class="text-5xl font-bold text-[#d4af37]">12+</div>
+                        <p class="mt-3 text-gray-300">Countries Served</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="bg-gradient-to-r from-[#a27b02] via-[#d4af37] to-[#FCEEBE] text-slate-900">
+            <div class="container mx-auto px-6 py-12 flex flex-col md:flex-row items-center justify-between gap-5">
+                <h2 class="text-2xl md:text-3xl font-bold">Let us design your next landmark project.</h2>
+                <a href="contact.html" class="bg-slate-900 text-white px-8 py-3 rounded-full hover:bg-black transition duration-300 font-bold">Talk to Our Team</a>
+            </div>
+        </section>
     </main>
 
     <div id="footer"></div>
 
     <script src="Assests/js/Reuse,js"></script>
-
-
-
 </body>
 </html>
